* Rework of Enum (no DataPointValueEnum anymore -> now use DPTEnumValue directly) * Add several tests * Change package of Function from Guava to Function in ConfigConstant